added multiple script src tags for bundles

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
   <body>
     <div id='mainbar'></div>
     <div id='app'></div>
+    <div id='nearby'></div>
   </body>
-  <script src="http://localhost:3000/:id/bundle.js"></script>
-  <script src="http://localhost:2000/:id/main.js"></script>
+  <script src="http://localhost:3000/:id/main.[chunk].bundle.js"></script>
+  <script src="http://localhost:2000/:id/topbar.js"></script>
+  <script src="http://localhost:2000/:id/main.topbar.js"></script>
+  <script src="http://localhost:2000/:id/vendor.topbar.js"></script>
 </html>
