--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <link rel='stylesheet' type='text/css' href='http://localhost:3000/:id/Modal.css'>
   </head>
   <body>
-    <div style="background-image: url(https://raster-static.postmates.com/?url=com.postmates.img.prod.s3.amazonaws.com%2F549cba44-b427-4ddc-8bb3-f609d598a8a0%2Forig.jpg&quality=85&w=3000&h=0&mode=auto&format=webp&v=4); height: 260px; width: 100%; background-size: cover; background-position: center; margin-bottom: 20px;"></div>
+    <!-- <div style="background-image: url(https://raster-static.postmates.com/?url=com.postmates.img.prod.s3.amazonaws.com%2F549cba44-b427-4ddc-8bb3-f609d598a8a0%2Forig.jpg&quality=85&w=3000&h=0&mode=auto&format=webp&v=4); height: 260px; width: 100%; background-size: cover; background-position: center; margin-bottom: 20px;"></div> -->
     <div id='mainbar'></div>
     <div id='menuitems'></div>
     <div id='nearby'></div>
