--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <div id="menuitems"></div>
     <div id="nearby"></div>
   </body>
-  <script src="http://localhost:1337/:id/main.bundle.js"></script>
-  <script src="http://localhost:3000/:id/main.menuitems.js"></script>
-  <script src="http://localhost:2000/:id/topbar.js"></script>
-  <script src="http://localhost:2000/:id/main.topbar.js"></script>
-  <script src="http://localhost:2000/:id/vendor.topbar.js"></script>
+  <!-- <script src="http://localhost:1337/:id/main.bundle.js"></script> -->
+  <!-- <script src="http://localhost:3000/:id/main.menuitems.js"></script> -->
+  <script src="http://ec2-100-24-63-53.compute-1.amazonaws.com/:id/topbar.js"></script>
+  <script src="http://ec2-100-24-63-53.compute-1.amazonaws.com/:id/main.topbar.js"></script>
+  <script src="http://ec2-100-24-63-53.compute-1.amazonaws.com/:id/vendor.topbar.js"></script>
 </html>
