--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="http://localhost:3000/:id/Modal.css">
+    <!-- <link rel="stylesheet" href="http://localhost:3000/:id/Modal.css"> -->
   </head>
   <body>
     <!-- <div style="background-image: url(https://raster-static.postmates.com/?url=com.postmates.img.prod.s3.amazonaws.com%2F549cba44-b427-4ddc-8bb3-f609d598a8a0%2Forig.jpg&quality=85&w=3000&h=0&mode=auto&format=webp&v=4); height: 260px; width: 100%; background-size: cover; background-position: center; margin-bottom: 20px;"></div> -->
@@ -10,7 +10,7 @@
   </body>
   <!-- <script src="http://localhost:1337/:id/main.bundle.js"></script> -->
   <!-- <script src="http://localhost:3000/:id/main.menuitems.js"></script> -->
-  <script src="http://ec2-100-24-63-53.compute-1.amazonaws.com/:id/topbar.js"></script>
-  <script src="http://ec2-100-24-63-53.compute-1.amazonaws.com/:id/main.topbar.js"></script>
-  <script src="http://ec2-100-24-63-53.compute-1.amazonaws.com/:id/vendor.topbar.js"></script>
+  <script src="http://52.90.230.178/:id/topbar.js"></script>
+  <script src="http://52.23.222.126/:id/main.topbar.js"></script>
+  <script src="http://54.196.95.134/:id/vendor.topbar.js"></script>
 </html>
