Change path of JS bundles

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </body>
   <!-- <script src="http://localhost:1337/:id/main.bundle.js"></script> -->
   <!-- <script src="http://localhost:3000/:id/main.menuitems.js"></script> -->
-  <script src="http://52.90.230.178/:id/topbar.js"></script>
-  <script src="http://52.23.222.126/:id/main.topbar.js"></script>
-  <script src="http://54.196.95.134/:id/vendor.topbar.js"></script>
+  <script src="http://52.90.230.178/topbar.js"></script>
+  <script src="http://52.23.222.126/main.topbar.js"></script>
+  <script src="http://54.196.95.134/vendor.topbar.js"></script>
 </html>
